--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,8 +16,8 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   flutter_test:
-    # This job will run on windows virtual machine
-    runs-on: windows-latest
+    # This job will run on ubuntu virtual machine
+    runs-on: ubuntu-latest
 
     steps:
       # The branch or tag ref that triggered the workflow will be checked out.
@@ -26,8 +26,8 @@ jobs:
         # Setup the flutter environment.
         - uses: subosito/flutter-action@v1
           with:
-            channel: 'dev' # 'dev', 'alpha', default to: 'stable'
-            flutter-version: '2.6.x' # you can also specify exact version of flutter
+            channel: 'stable' # 'dev', 'alpha', default to: 'stable'
+            flutter-version: '2.10.x' # you can also specify exact version of flutter
         - run: flutter doctor -v
         - run: flutter clean
         - run: flutter pub get
@@ -47,7 +47,7 @@ jobs:
 #         - uses: subosito/flutter-action@v1
 #           with:
 #             channel: 'dev' # 'dev', 'alpha', default to: 'stable'
-#             flutter-version: '2.6.x' # you can also specify exact version of flutter
+#             flutter-version: '2.10.x' # you can also specify exact version of flutter
 #         - run: flutter doctor -v
 #         - run: flutter clean
 #         - run: flutter pub get
