--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,9 +13,15 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+
+  #Bottom Navigation
+  curved_navigation_bar: ^1.0.3
+  
   flutter:
     sdk: flutter
   
+
+ 
 
 dev_dependencies:
   flutter_test:
@@ -38,10 +44,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-
+  assets:
+    - assets/
+    - assets/images/
+    - assets/icons/
 
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
