--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,13 @@ dependencies:
   flutter:
     sdk: flutter
   
+  #For Navigation
+  flutter_hooks: ^0.18.3
+  flutter_svg: ^1.0.3
+  go_router: ^3.0.7
+  hooks_riverpod: ^1.0.3
+  logger: ^1.1.0
+  
 
  
 
@@ -47,6 +54,7 @@ flutter:
   assets:
     - assets/
     - assets/images/
+    - assets/icons/
 
 
   # To add custom fonts to your application, add a fonts section here,
