--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   #Bottom Navigation
   curved_navigation_bar: ^1.0.3
 
+  equatable: ^2.0.3
   flutter:
     sdk: flutter
   
@@ -26,6 +27,7 @@ dependencies:
   go_router: ^3.0.7
   hooks_riverpod: ^1.0.3
   logger: ^1.1.0
+  nock: ^1.2.0
   
 
  
