--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,11 +23,11 @@ dependencies:
   
   #For Navigation
   flutter_hooks: ^0.18.3
+  flutter_screenutil: ^5.4.0+1
   flutter_svg: ^1.0.3
   go_router: ^3.0.7
   hooks_riverpod: ^1.0.3
   logger: ^1.1.0
-  nock: ^1.2.0
   
 
  
@@ -42,7 +42,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   lint: ^1.8.2
-
+  network_image_mock: ^2.0.1
 
 # The following section is specific to Flutter.
 flutter:
